--- a/index.html
+++ b/index.html
@@ -350,11 +350,12 @@
             
         </div>
     </nav>
-    <video autoplay muted loop id="myVideo">
-        <source class="Vid" src="mc.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-      </video>
+    
     <div class="overlay"></div>
+         <video autoplay muted loop id="myVideo">
+        <source class="video" src="mc.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+         </video>
     <div class="card">
 <div class="main-container">
   <div class="content">
