--- a/index.html
+++ b/index.html
@@ -392,8 +392,9 @@
   
         <div class="bg-effect bg-effect-1"></div>
         <div class="section-content">
+          <marquee>
           <h1 class="heading">Media/Creator Role Application </h1>
-           
+           </marquee>
             <p class="text-white">
                Are you interested in promoting your social media accounts to this SMP? If so you have come to the right place. You can create videos about the SMP and gain the Media Role in the Discord server just by filling the form given below! The Media Rank will be decided on the views you get not the total number of subscribers of your channel.</p>
                <h2 class="text-white">Role Requirements:</h2>
