--- a/index.html
+++ b/index.html
@@ -513,24 +513,8 @@ for (i = 0; i < close.length; i++) {
   }
 }
 </script>
-<style>
-  .glow {
-  font-size: 30px;
-  color: #fff;
-  text-align: center;
-  animation: glow 1s ease-in-out infinite alternate;
-}
-@-webkit-keyframes glow {
-  from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-  }
-  
-  to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-  }
-}
-</style>
-<p class="glow">This website is new and will have more features in the future!!!</p>
+
+<p class="text-white">This website is new and will have more features in the future!!!</p>
   
 
                       </div>
