--- a/index.html
+++ b/index.html
@@ -319,7 +319,10 @@
             background: rgba(0, 0, 0, 0.8);
             border-radius: 8px;
             padding: 2rem;
-            margin-bottom: 2rem;
+            margin-top:2rem
+            margin-lefy: 4rem;
+            margin-right:4rem;
+            margin-bottom: 4rem;
             backdrop-filter: blur(10px);
             border: 1px solid rgba(76, 175, 80, 0.2);
             transition: transform 0.3s ease;
