--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             border-radius: 8px;
             padding: 2rem;
             margin-top:2rem
-            margin-left: 4rem;
+            margin:auto;
             margin-right:4rem;
             margin-bottom: 4rem;
             backdrop-filter: blur(10px);
