All webpages added

--- a/new.html
+++ b/new.html
@@ -353,23 +353,19 @@
   
         <div class="bg-effect bg-effect-1"></div>
         <div class="section-content">
-            <h1 class="section-title">Welcome</h1>
+            <h1 class="section-title">Benefits</h1>
             <p class="text-white">
-              Welcome to Luminous SMP, a vibrant and dynamic Minecraft survival multiplayer server where adventure, creativity, and community come together! Whether you're a seasoned builder, a fearless explorer, or a redstone mastermind, Luminous SMP offers a rich and immersive experience for all players.</p>
+              The website of Luminous SMP is new and people who visit the website at least 7 times per week will have a higher chance at winning Giveaways so all you need to do is be active for rewards!</p>
 <p class="text-white">
-Step into a world where the landscape is alive with stunning builds, breathtaking landscapes, and limitless opportunities. Work together with friends to create thriving towns, take on daring challenges, or forge your own path in the wilderness. With a friendly and supportive player base, Luminous SMP is more than just a server it's a family of passionate Minecraft enthusiasts.</p>
-<p class="text-white">
-Our server is designed to balance survival gameplay with exciting custom features, providing an engaging experience without losing the essence of vanilla Minecraft. Expect thrilling events, unique in-game mechanics, and a welcoming community that fosters collaboration and fun. Whether you prefer to build grand structures, uncover hidden loot, or engage in epic battles, there is always something new to discover.</p>
-<p class="text-white">
-Join us in Luminous SMP, where every block placed tells a story, every adventure is unforgettable, and the possibilities are endless. Are you ready to shine? The journey starts now!</p>
+ There will be upcoming events and reward schemes in the future if everyone likes the concept of this website!</p>
 
-<p class="text-white">
-              Experience the greatness of Luminous SMP by joining the Discord Server!  </p>
-        </div>
+<p 
+
+
     
     <div class="w3-panel w3-leftbar w3-light-grey">
-                        <p class="w3-xlarge w3-serif"><i>"Luminous SMP is better than Hypixel lol."</i></p>
-                        <p>Sun Tzu, The Art Of War</p>
+                        <p class="w3-xlarge w3-serif"><i>"Temporary Offer: Try sharing the website to 10 more people to gain a 10% boost on all giveaways! "</i></p>
+                        <p>Owner</p>
                       </div>
     
     <style>
