Update index.html video

--- a/index.html
+++ b/index.html
@@ -318,6 +318,20 @@
             border: 1px solid rgba(76, 175, 80, 0.2);
             transition: transform 0.3s ease;
         }
+         #myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+}
+.heading{
+  background: var(--gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: gradient 8s linear infinite;
+}
   </style>
   <body>
       <!--Background-->
