Update index.html navbar

--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
             </button>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="about.html">News<span class="w3-badge w3-red">  3</span></a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="news.html">News<span class="w3-badge w3-red">  3</span></a></li>
                 <li><a href="event.html">Events</a></li>
                  <li><a href="wl.html">Whitelist</a></li>
-                 <li><a href="">Community</a></li>
+                 <li><a href="forms.html">Applications</a></li>
             </ul>
               
             
