--- a/news.html
+++ b/news.html
@@ -324,6 +324,20 @@
             border: 1px solid rgba(76, 175, 80, 0.2);
             transition: transform 0.3s ease;
         }
+         #myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+}
+.heading{
+  background: var(--gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: gradient 8s linear infinite;
+}
   </style>
   
   <body>
@@ -343,11 +357,11 @@
             </button>
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="about.html">News<span class="w3-badge w3-red">  3</span></a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="news.html">News<span class="w3-badge w3-red">  3</span></a></li>
                 <li><a href="event.html">Events</a></li>
                  <li><a href="wl.html">Whitelist</a></li>
-                 <li><a href="">Community</a></li>
+                 <li><a href="forms.html">Applications</a></li>
             </ul>
               
             
