Update index.html staff login

--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
                 <li><a href="event.html">Events</a></li>
                  <li><a href="wl.html">Whitelist</a></li>
                  <li><a href="forms.html">Applications</a></li>
+                 <li><a href="login.html">Staff</a></li>
             </ul>
               
             
