--- a/login.html
+++ b/login.html
@@ -220,7 +220,7 @@
             .mobile-nav-toggle.active .bar:nth-child(3) {
                 transform: translate(-50%, -5px) rotate(-45deg);
                 width: 24px;
-            }
+            } 
 
             .overlay {
                 position: fixed;
@@ -313,6 +313,7 @@
             background: rgba(0, 0, 0, 0.8);
             border-radius: 8px;
             padding: 2rem;
+              margin: auto;
             margin-bottom: 2rem;
             backdrop-filter: blur(10px);
             border: 1px solid rgba(76, 175, 80, 0.2);
