Update login.html video again lol

--- a/login.html
+++ b/login.html
@@ -320,12 +320,13 @@
             transition: transform 0.3s ease;
         }
          #myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%; 
-  min-height: 100%;
-}
+    position: fixed;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    min-height: 100%;
+    z-index: -1; /* This keeps it in the background */
+         }
 .heading{
   background: var(--gradient);
             -webkit-background-clip: text;
