--- a/Staff_Dashboard.html
+++ b/Staff_Dashboard.html
@@ -425,6 +425,7 @@
     <div class="alert info">
   <span class="closebtn">&times;</span>  
   <strong>Info!</strong> If any issue occurs in the website report to Dweesh immediately.
+    </div>
 <div class="card">
   <h2 class="text-white"><a href="#">Whitelist</a></h2>
  <marquee><p class="text-white">
